fix/fix-contentOverlaping

--- a/styles/AboutPage.module.css
+++ b/styles/AboutPage.module.css
@@ -13,9 +13,10 @@
   padding-bottom: 100px;
 }
 .grid {
-  display: flex;
+  display: grid;
   place-items: center;
   grid-gap: 5px;
+  grid-template-columns: auto auto auto;
 }
 .cardAbout h2 {
   color: #7f6af3;
@@ -29,8 +30,8 @@
   border: 1px solid #fff;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 450px;
-  min-height: 250px;
+  max-width: 350px;
+  min-height: 300px;
 }
 .cardLang {
   margin: 0;
